# simplatform

./: README.md  run.sh
install/: .rosinstall  local_setup.sh  setup.sh
install/lib/pkgconfig/: velodyne_description.pc  velodyne_gazebo_plugins.pc
install/share/velodyne_description/cmake/: velodyne_descriptionConfig.cmake
install/share/velodyne_description/urdf/: .LIVOX-16.urdf.xacro.swp  .LIVOX-32E.urdf.xacro.swp  .example.urdf.xacro.swp
install/share/velodyne_gazebo_plugins/cmake/: velodyne_gazebo_pluginsConfig.cmake
install/share/weichai_sim/: package.xml
install/share/weichai_sim/cmake/: weichai_simConfig.cmake
install/share/weichai_sim/config/: weichai_control.yaml
install/share/weichai_sim/launch/: change.launch  gazebo_empty.launch  sim_test.launch  tingzi.launch  vehicle.launch  vehicle_rviz.launch  vehicle_test.launch  weichai_sim.launch  weichai_spawn.launch  weichai_test.launch
install/share/weichai_sim/meshes/: test.STL
install/share/weichai_sim/rviz/: path_following_test.rviz  vehicle.rviz  vehicle_sdk.rviz  vehicle_sq.rviz
install/share/weichai_sim/urdf/: test.xacro  vehicle.xacro  vehicle_gazebo.urdf.xacro  vehicle_gazebo_sq.urdf.xacro  vehicle_imu.xacro  vehicle_model.urdf.xacro  vehicle_model_sq.urdf.xacro  vehicle_only.xacro  vehicle_sdk.xacro  vehicle_sensors.urdf.xacro  vehicle_sq.xacro  weichai_sim.gazebo  weichai_sim.xacro
install/share/weichai_sim/worlds/: empty_sky.world  empty_sky_copy.world  empty_world.world  enviroment_test.world  parkinglot.world  readme.md  road.world  simple_city.world  skidpan.world  test.world  test_track.world  tingzi.world  wei_chai.world  weichai.world  weichai_add_obs.world  weichai_full.world  weichai_static.world  weichai_test.world  zh.world  zh1.world
src/velodyne_description/urdf/: LIDAR.urdf.xacro  LIVOX-16.urdf.xacro  LIVOX-32E.urdf.xacro  example.urdf.xacro
